--- a/views/chat.handlebars
+++ b/views/chat.handlebars
@@ -81,7 +81,7 @@
             <div class="chatting_profile border-bottom">
                 <div class="m-auto vertical-center pl-3">
                     <div class="d-inline-block align-middle">
-                        <img class="chatter_profile_thumb" src="/images/profiles/female.jpg" alt="profile Image">
+                        <img class="chatter_profile_thumb" src="/images/profiles/male.jpg" alt="profile Image">
                     </div>
                     <div class="d-inline-block align-middle">
                         <div class="friend_data_thumb m-auto pl-2">
@@ -100,7 +100,11 @@
                 <div class="message_container">
                     {{!-- chat --}}
                     <div class="message sent">
-                        Hello
+                        <p>Hello</p>
+                    </div>
+
+                    <div class="message recieved">
+                        <p>Hey</p>
                     </div>
                 </div>
             </div>
