--- a/public/css/index.css
+++ b/public/css/index.css
@@ -461,7 +461,7 @@ input:focus {
 }
 
 /* chat */
-#chat_container {}
+/* #chat_container {} */
 
 
 #chat_container ul {
@@ -563,34 +563,37 @@ input:focus {
 }
 
 .message {
+    display: block;
+    border-radius: 5px 0px 5px 5px;
+    clear: both;
+    position: relative;
     padding: 0.3rem .8rem;
+}
+
+.message p {
+    font-size: 1.1rem;
+    margin-bottom: 0px;
     max-width: 80%;
-    float: right;
+}
+
+.message.sent p {
+    color: #13988a !important;
 }
 
 .message.sent {
-    background: #e1ffc7;
-    position: relative;
+    float: right;
+    border: 1.1px solid #cacaca;
 }
 
-.message.sent::after {
-    position: absolute;
-    content: "";
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 0px 0 10px 10px;
-    border-color: transparent transparent transparent #e1ffc7;
-    top: 0;
-    right: -10px;
+.message.recieved {
+    background: #13988a;
+    float: left;
 }
 
-/* .message.sent::after {
-    border-width: 0px 0 10px 10px;
-    border-color: transparent transparent transparent #e1ffc7;
-    top: 0;
-    right: -10px;
-} */
+.message.recieved p{
+    color: white !important;
+    float: left;
+}
 
 /* media query */
 @media only screen and (min-width:1140px) {}
