almost added all ui into message chat

--- a/views/chat.handlebars
+++ b/views/chat.handlebars
@@ -108,8 +108,116 @@
                         <span class="left_corner"><span class="inner_left_corner"></span></span>
                         <p>Hey</p>
                     </div>
+                    {{!-- chat --}}
+                    <div class="message sent">
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <span class="right_corner"><span class="inner_right_corner"></span></span>
+                    </div>
+
+                    <div class="message recieved">
+                        <span class="left_corner"><span class="inner_left_corner"></span></span>
+                        <p>Lorem, ipsum dolor.</p>
+                    </div>
+                    {{!-- chat --}}
+                    <div class="message sent">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <span class="right_corner"><span class="inner_right_corner"></span></span>
+                    </div>
+
+                    <div class="message recieved">
+                        <span class="left_corner"><span class="inner_left_corner"></span></span>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa, a expedita! Modi debitis placeat culpa earum commodi deserunt officiis, ipsum quo! Non neque doloremque doloribus quos obcaecati blanditiis eveniet cupiditate.</p>
+                    </div>
+                    {{!-- chat --}}
+                    <div class="message sent">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia provident dolorum assumenda eius. Illo cumque nulla laboriosam sed. Aliquam, distinctio!</p>
+                        <span class="right_corner"><span class="inner_right_corner"></span></span>
+                    </div>
+
+                    <div class="message recieved">
+                        <span class="left_corner"><span class="inner_left_corner"></span></span>
+                        <p>Hey</p>
+                    </div>
+                    {{!-- chat --}}
+                    <div class="message sent">
+                        <p>Hello</p>
+                        <span class="right_corner"><span class="inner_right_corner"></span></span>
+                    </div>
+
+                    <div class="message recieved">
+                        <span class="left_corner"><span class="inner_left_corner"></span></span>
+                        <p>Hey</p>
+                    </div>
+                    {{!-- chat --}}
+                    <div class="message sent">
+                        <p>Hello</p>
+                        <span class="right_corner"><span class="inner_right_corner"></span></span>
+                    </div>
+
+                    <div class="message recieved">
+                        <span class="left_corner"><span class="inner_left_corner"></span></span>
+                        <p>Hey</p>
+                    </div>
+                    {{!-- chat --}}
+                    <div class="message sent">
+                        <p>Hello</p>
+                        <span class="right_corner"><span class="inner_right_corner"></span></span>
+                    </div>
+
+                    <div class="message recieved">
+                        <span class="left_corner"><span class="inner_left_corner"></span></span>
+                        <p>Hey</p>
+                    </div>
+                    {{!-- chat --}}
+                    <div class="message sent">
+                        <p>Hello</p>
+                        <span class="right_corner"><span class="inner_right_corner"></span></span>
+                    </div>
+
+                    <div class="message recieved">
+                        <span class="left_corner"><span class="inner_left_corner"></span></span>
+                        <p>Hey</p>
+                    </div>
+                    {{!-- chat --}}
+                    <div class="message sent">
+                        <p>Hello</p>
+                        <span class="right_corner"><span class="inner_right_corner"></span></span>
+                    </div>
+
+                    <div class="message recieved">
+                        <span class="left_corner"><span class="inner_left_corner"></span></span>
+                        <p>Hey</p>
+                    </div>
+                    {{!-- chat --}}
+                    <div class="message sent">
+                        <p>Hello</p>
+                        <span class="right_corner"><span class="inner_right_corner"></span></span>
+                    </div>
+
+                    <div class="message recieved">
+                        <span class="left_corner"><span class="inner_left_corner"></span></span>
+                        <p>Hey</p>
+                    </div>
+                    {{!-- chat --}}
+                    <div class="message sent">
+                        <p>Hello</p>
+                        <span class="right_corner"><span class="inner_right_corner"></span></span>
+                    </div>
+
+                    <div class="message recieved">
+                        <span class="left_corner"><span class="inner_left_corner"></span></span>
+                        <p>Hey</p>
+                    </div>
                 </div>
-                <div class="chat_input"></div>
+
+                {{!-- chat input area --}}
+
+                <div class="input_area">
+                    <div class="form-row">
+                        <input class="input_field_chat" type="any">
+                        <button>Send</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
