--- a/public/css/index.css
+++ b/public/css/index.css
@@ -461,8 +461,9 @@ input:focus {
 }
 
 /* chat */
-/* #chat_container {} */
-
+#chat_container {
+    height: 100vh;
+}
 
 #chat_container ul {
     list-style-type: none;
@@ -474,6 +475,11 @@ input:focus {
     width: 100%;
     border-bottom: solid 1px #eeeeee;
     padding: 0.65rem 1rem;
+    cursor: pointer;
+}
+
+#chat_container ul li:hover {
+    background-color: #cffdff;
 }
 
 .chat_nav {
@@ -483,7 +489,7 @@ input:focus {
 }
 
 .active_chatter {
-    background-color: rgba(19, 152, 138, 0.17);
+    background-color: rgba(215, 238, 235, 0.73);
 }
 
 .nav_data {
@@ -492,6 +498,7 @@ input:focus {
 
 .friendsList {
     height: inherit;
+    box-shadow: 7px 5px 8px 4px rgba(163, 255, 239, 0.25);
 }
 
 .profile_thumb {
@@ -549,6 +556,7 @@ input:focus {
 .chatting_profile {
     height: 4rem;
     background-color: #eeeeee;
+    box-shadow: 7px 5px 8px 4px rgba(163, 255, 239, 0.25);
 }
 
 .chatter_profile_thumb {
@@ -564,27 +572,32 @@ input:focus {
     height: 90vh;
     width: 98.45%;
     padding: 1rem 2.5rem;
-    background-color: #f7f7f7;
+    background-color: rgba(215, 238, 235, 0.73);
+    overflow: scroll;
 }
 
 .message {
     display: block;
     clear: both;
     position: relative;
-    padding: 0.3rem .8rem;
+    padding: 0.3rem 1.5rem;
+    max-width: 80%;
+    margin-top: 1.4rem;
 }
 
 .message.sent {
     float: right;
     border: 1.1px solid #cacaca;
-    border-radius: 5px 0px 5px 5px;
+    border-radius: 30px 0px 5px 30px;
     background-color: white;
+    box-shadow: -4px 4px 13px 2px rgba(65, 255, 235, 0.15);
 }
 
 .message.recieved {
     border-radius: 0px 5px 5px 5px;
     background: #13988a;
     float: left;
+    box-shadow: 4px 4px 13px 2px white;
 }
 
 .right_corner {
@@ -617,14 +630,13 @@ input:focus {
     left: -20px;
     top: 0px;
     -webkit-clip-path: polygon(100% 0, 0 0, 100% 70%);
-clip-path: polygon(100% 0, 0 0, 100% 70%);
+    clip-path: polygon(100% 0, 0 0, 100% 70%);
     background-color: #13988a;
 }
 
 .message p {
     font-size: 1.1rem;
     margin-bottom: 0px;
-    max-width: 80%;
 }
 
 .message.sent p {
@@ -638,6 +650,57 @@ clip-path: polygon(100% 0, 0 0, 100% 70%);
     float: left;
 }
 
+/* input area */
+.input_area {
+    background-color: white;
+    position: absolute;
+    bottom: 0px;
+    right: -4px;
+    width: 100%;
+    box-shadow: 0px -5px 7px 3px rgba(127, 255, 232, 0.18);
+}
+
+.input_area input {
+    max-width: 90%;
+    width: 90%;
+    height: 3rem;
+    border: none;
+    border: solid 2px #13988a;
+}
+
+.input_area input:focus {
+    border: none;
+    border: solid 2px #429af1 !important;
+    box-shadow: none !important;
+}
+
+.input_area button {
+    width: 5.1rem;
+    border: none;
+    color: white;
+    background-color: #13988a;
+    cursor: pointer;
+    letter-spacing: 0.65px;
+    font-weight: bold;
+}
+/* scroll bar */
+
+.message_area::-webkit-scrollbar-track {
+    /* -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
+    background-color: transparent;
+    border-radius: 10px;
+    
+}
+
+.message_area::-webkit-scrollbar {
+    width: 6px;
+    background-color: transparent;
+}
+
+.message_area::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #0f7cff;;
+}
 /* media query */
 @media only screen and (min-width:1140px) {}
 
