added menu bar in chat

--- a/views/chat.handlebars
+++ b/views/chat.handlebars
@@ -1,19 +1,20 @@
+<span class="back"></span>
 <section id="chat_container">
-    <div class="menu_options menu_option_hide">
-    <div class="menu_container">
+    <div class="menuBackground menu_container">
+        <div class="menu_options menu_option_hide">
+            <div class="prof">
+                <h5>Profile</h5>
+                <div class="menu_dots"></div>
+            </div>
+            <ul>
+                <li>Profile</li>
+                <li>All Friend</li>
+                <li>Requests</li>
+                <li>Search</li>
+                <li>Logout</li>
+            </ul>
+
         </div>
-        <div class="prof">
-            <h5>Profile</h5>
-            <div class="menu_dots"></div>
-        </div>
-        <ul>
-            <li>Profile</li>
-            <li>All Friend</li>
-            <li>Requests</li>
-            <li>Search</li>
-            <li>Logout</li>
-        </ul>
-        
     </div>
     <div class="row h-100">
         <div class="col-lg-3 col-md-4 col-sm-5 border-right pr-0">
