--- a/public/css/index.css
+++ b/public/css/index.css
@@ -489,7 +489,7 @@ input:focus {
 }
 
 .active_chatter {
-    background-color: #cae9eb;
+    background-color: #cae9eb !important;
 }
 
 .nav_data {
@@ -498,6 +498,7 @@ input:focus {
 
 .friendsList {
     height: inherit;
+    background-color: white;
     box-shadow: 7px 5px 8px 4px rgba(163, 255, 239, 0.25);
 }
 
@@ -656,8 +657,9 @@ input:focus {
     background-color: white;
     position: absolute;
     bottom: 0px;
-    right: -4px;
+    right: 0px;
     width: 100%;
+    border: solid 2px #13988a;
     box-shadow: 0px -5px 7px 3px rgba(127, 255, 232, 0.18);
 }
 
@@ -666,7 +668,6 @@ input:focus {
     width: 90%;
     height: 3rem;
     border: none;
-    border: solid 2px #13988a;
 }
 
 .input_area input:focus {
@@ -704,20 +705,21 @@ input:focus {
     background-color: #0f7cff;
 }
 
-.menu_container {
+.back {
     position: fixed;
     top: 0px;
-    right: -100vw;
+    left: 0px;
+    display: block;
     width: 100vw;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.47);
-    transition: cubic-bezier(0.05, 0.1, 0.51, 1.11) all 400ms;
-    opacity: 0;
+    background-color: black;
+    opacity: 0.3;
+    z-index: 0;
+    transition: cubic-bezier(0.05, 0.1, 0.51, 1.11) 350ms;
 }
 
-.backFade {
-    opacity: 1;
-    left: 17rem;
+.back_toggle {
+    z-index: 1;
 }
 
 .menu_dots {
@@ -750,10 +752,10 @@ input:focus {
     left: -17rem !important;
 }
 
-
 .menu_options ul li {
     border: none !important;
     transition: all 200ms;
+    
 }
 
 .menu_options ul li:hover {
