--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -40,7 +40,7 @@
                         <li><a class="nav-item nav-link active" href="/">Home</a></li>
                         <li><a class="nav-item nav-link" href="#">Feature</a></li>
                         <li><a class="nav-item nav-link" href="#">Pricing</a></li>
-                        <li><a class="nav-item nav-link" href="#">Pages</a></li>
+                        <li><a class="nav-item nav-link" href="/chat">Chatapp</a></li>
                         <li><a class="nav-item user_btn" href="/login">Login</a></li>
                     </ul>
                 </div>
