--- a/views/chat.handlebars
+++ b/views/chat.handlebars
@@ -238,11 +238,9 @@
 
                 {{!-- chat input area --}}
 
-                <div class="input_area">
-                    <div class="form-row">
-                        <input class="input_field_chat" type="any">
-                        <button>Send</button>
-                    </div>
+                <div class="input_area form-row">
+                    <textarea class="input_field_chat" name="" id="" cols="30" rows="10" fixed></textarea>
+                    <button>Send</button>
                 </div>
             </div>
         </div>
