imporving basic ui

--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -10,9 +10,11 @@
                     <div class="oauth_container">
                         <div class="oauth facebook">
                             <a href="/auth/google" class="btn">Facebook</a>
+                            <i class="fab fa-facebook-f"></i>
                         </div>
                         <div class="oauth google">
                             <a href="/auth/google" class="btn">Google</a>
+                            <i class="fab fa-google-plus-g"></i>
                         </div>
                     </div>
                     <h5>or</h5>
