--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -4,7 +4,7 @@
     <p class="text-center w-75 mx-auto px-sm-0 px-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
         quidem doloremque molestiasmagni sint rem sit. Nostrum cumque ipsum sint quas eveniet provident nisi!</p>
     <a href="/">
-        <button type="button" class="btn btn-primary px-4 py-2 d-block mx-auto">Back to Home <span class="badge badge-light ml-2">4</span></button>
+        <button type="button" class="btn btn-primary px-4 py-2 d-block mx-auto">Redirecting in <span class="badge badge-light ml-2">4</span></button>
     </a>
 </div>
 <script>
@@ -13,6 +13,8 @@
         setInterval(() => {
             $(".thanks_container button span").text(counter);
             counter--;
+            if (counter === 0)
+                $(".thanks_container button").css("background-color", "#0062f8");
             if (counter < 0)
                 location.pathname = "/login"
         }, 1000);
