--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3,6 +3,11 @@
     outline: none !important;
 }
 
+.fab {
+    font-family: "Font Awesome 5 Brands" !important;
+    font-weight: 100;
+}
+
 /* loader */
 
 .loader_container {
@@ -439,7 +444,19 @@ input:focus {
     font-weight: bold;
     letter-spacing: 1px;
     text-decoration: none;
+    overflow: hidden;
+    height: 2.4rem;
+    cursor: pointer;
 }
+
+.oauth .btn {
+    display: block;
+    transition: ease all 300ms;
+}
+.oauth:hover .btn{
+    margin-top: -2rem;
+}
+
 
 .oauth:not(:first-child) {
     margin-left: 1rem;
@@ -449,12 +466,14 @@ input:focus {
     text-decoration: none;
     color: white;
     width: 8rem;
-    outline: none !important
+    outline: none !important;
+    display: block;
 }
 
 .facebook {
     background-color: #3b5999;
 }
+
 
 .google {
     background-color: #dd4b39;
@@ -476,6 +495,8 @@ input:focus {
     border-bottom: solid 1px #eeeeee;
     padding: 0.65rem 1rem;
     cursor: pointer;
+    font-weight: bold;
+    color: #303030;
 }
 
 #chat_container ul li:hover {
@@ -675,7 +696,8 @@ input:focus {
 .input_area textarea:focus {
     box-shadow: none !important;
 }
-.input_area textarea:focus-within{
+
+.input_area textarea:focus-within {
     border-color: #0f7cff !important;
 }
 
@@ -767,6 +789,7 @@ input:focus {
 }
 
 .menu_options ul li:hover:last-child {
+    color: white !important;
     background-color: #ff9595 !important
 }
 
@@ -983,5 +1006,10 @@ input:focus {
 
     form p a {
         font-size: 0.7rem;
+    }
+
+    /* thanks */
+    .thanks_container p {
+        width: 100% !important;
     }
 }
