--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,6 +8,7 @@
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/index.css">
@@ -38,7 +39,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <ul class="navbar-nav ml-auto">
                         <li><a class="nav-item nav-link active" href="/">Home</a></li>
-                        <li><a class="nav-item nav-link" href="#">Feature</a></li>
+                        <li><a class="nav-item nav-link" href="/thanks">Feature</a></li>
                         <li><a class="nav-item nav-link" href="#">Pricing</a></li>
                         <li><a class="nav-item nav-link" href="/chat">Chatapp</a></li>
                         <li><a class="nav-item user_btn" href="/login">Login</a></li>
