--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,10 +9,12 @@
                     <p class="d-sm-none">Login with you preference.</p>
                     <div class="oauth_container">
                         <div class="oauth facebook">
-                            <a href="/auth/google" class="btn">Facebook</a>
+                            <a href="/auth/facebook" class="btn">Facebook</a>
+                            <i class="fab fa-facebook-f"></i>
                         </div>
                         <div class="oauth google">
                             <a href="/auth/google" class="btn">Google</a>
+                            <i class="fab fa-google-plus-g"></i>
                         </div>
                     </div>
                     <h5>or</h5>
