--- a/views/chat.handlebars
+++ b/views/chat.handlebars
@@ -4,7 +4,7 @@
         <div class="menu_options menu_option_hide">
             <div class="prof">
                 <h5>Profile</h5>
-                <div class="menu_dots"></div>
+                <i class="menu_dots fas fa-times vertical-center"></i>
             </div>
             <ul>
                 <li>Profile</li>
@@ -25,7 +25,7 @@
                         <h5>Profile</h5>
                     </div>
                     <div class="float-right">
-                        <div class="menu_dots"></div>
+                        <i class="menu_dots fas fa-ellipsis-v vertical-center"></i>
                     </div>
                 </div>
             </div>
@@ -116,6 +116,8 @@
                         </div>
                     </div>
                 </div>
+                {{!-- paperclip --}}
+                <i class="chat_nav_pc fas fa-paperclip"></i>
             </div>
 
             {{!-- chatting area --}}
